--- a/Views/ShoppingCart/ShowToCart.cshtml
+++ b/Views/ShoppingCart/ShowToCart.cshtml
@@ -90,130 +90,71 @@
             </div>
 
             @*Place Order*@
-            <div class="col-lg-3">
-                <div class="font-medium mb-2">Shipping Info</div>
-                <div class="text-gray-400 font-light text-xs">Fill your order</div>
-                @using (Html.BeginForm("CheckOut", "ShoppingCart"))
-                {
+        <div class="col-lg-3">
+            <div class="font-medium mb-2">Shipping Info</div>
+            <div class="text-gray-400 font-light text-xs">Fill your order</div>
+            @using (Html.BeginForm("CheckOut", "ShoppingCart"))
+            {
 
-                    @*Email*@
-                    <div class="flex justify-center mt-2">
-                        <div class="relative w-full" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your email"
-                                   value=""
-                                   name="email" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                Email
-                            </label>
-                        </div>
+                @*Email*@
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="email" class="text-sm">Email</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" />
                     </div>
-                    @*Phone*@
-                    <div class="flex justify-center mt-2">
-                        <div class="relative w-full" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your phone number"
-                                   value="123"
-                                   name="phone" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                Phone Number
-                            </label>
-                        </div>
+                </div>
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="phone" class="text-sm">Phone</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" />
                     </div>
+                </div>
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="street" class="text-sm">Street</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address" />
+                    </div>
+                </div>
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="district" class="text-sm">District</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" />
+                    </div>
+                </div>
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="ward" class="text-sm">Ward</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" />
+                    </div>
+                </div>
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="city" class="text-sm">City</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city" />
+                    </div>
+                </div>
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="card-number" class="text-sm">Card</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your card number" name="card-number" />
+                    </div>
+                </div>
 
-                    @*Address*@
-                    <div class="flex justify-center mt-2">
-                        <div class="relative w-full" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your address"
-                                   value="123" name="address" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                Address
-                            </label>
-                        </div>
-                    </div> <div class="flex justify-center mt-2">
-                        <div class="relative w-full" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your address"
-                                   value="123" name="district" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                District
-                            </label>
-                        </div>
-                    </div>
-                    <div class="flex justify-center mt-2">
-                        <div class="relative w-full" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your address"
-                                   value="123" name="ward" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                Ward
-                            </label>
-                        </div>
-                    </div>
-                    <div class="flex justify-center mt-2">
-                        <div class="relative w-full" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your address"
-                                   value="123" name="city" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                City
-                            </label>
-                        </div>
-                    </div>
+                @*Promo Code*@
+                <div class="font-medium my-2">Apply Coupon</div>
+                <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
 
-                    @*Card Number*@
-                    <div class="flex justify-center my-2">
-                        <div class="relative w-full mb-4" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your card number" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                Paypal Card
-                            </label>
-                        </div>
+                @*Enter promo-code*@
+                <div class="mt-2 text-black">
+                    <div class="relative w-full" data-te-input-wrapper-init>
+                        <label for="code" class="text-sm">Promocode</label><br />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your promocode" name="code" />
                     </div>
-                    @*Promo Code*@
-                    <div class="font-medium my-2">Apply Coupon</div>
-                    <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
+                </div>
 
-                    @*Enter promo-code*@
-                    <div class="flex justify-center mt-2 mb-4 justify-between">
-                        <div class="relative w-75" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your promo code"
-                                   value="Null" name="code" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                Promo Code
-                            </label>
-                        </div>
-
-                        @*Apply Promo-Code*@
-                        <a class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;">Apply</a>
-                    </div>
+                @*Apply Promo-Code*@
+                <!--<a class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;">Apply</a>
+            </div>-->
 
 
                     @*Order Sumamry*@
