--- a/Views/products/Edit.cshtml
+++ b/Views/products/Edit.cshtml
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.images, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
+                @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control", @type = "file", @accept = "image/*" } })
                 @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
             </div>
         </div>
