--- a/Views/Shopping/ShowToCart.cshtml
+++ b/Views/Shopping/ShowToCart.cshtml
@@ -104,37 +104,37 @@
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="email" class="text-sm">Email</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" required/>
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="phone" class="text-sm">Phone</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" required/>
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="street" class="text-sm">Street</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address" />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address"required/>
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="district" class="text-sm">District</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" required/>
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="ward" class="text-sm">Ward</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" required/>
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="city" class="text-sm">City</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city" />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city"required />
                         </div>
                     </div>
                     <div class="mt-2 text-black">
