--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -123,40 +123,45 @@
         @foreach (var item in Model)
         {
 
-            <div class="flex justify-center text-md">
-                <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                    <a href="/Home/Details_Pro/@item.id_product">
+            <div class="flex justify-center text-md w-full">
+                <div class="block max-w-sm rounded-lg bg-white shadow-lg w-full">
                         @*<a href="#!">*@
-                        <img class="rounded-t-lg h-50 mx-auto"
+                        <img class="rounded-t-lg mx-auto object-center"
+                             style="height: 350px"
+                             style="height:300px"
                              src="~/wwwroot/Images/Products/@item.images" 
                              alt="" />
                         @*</a>*@
-                        <div class="p-3 font-medium">
-                            <div class="flex flex-row justify-between pb-3 border-bottom">
-                                <p>$@Html.DisplayFor(modelItem => item.price)</p>
-                                <div class="flex flex-row">
-                                    <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                </div>
-                            </div>
-
-                            <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                                @Html.DisplayFor(modelItem => item.names)
-                            </h5>
-                            <p class="mb-4   text-neutral-500 font-light">
-                                Some quick example text to build on the card title and make up the
-                                bulk of the card's content. 
-                            </p>
-
-                            <div class="flex flex-row justify-between align-items-center font-semibold">
-                                    @*<a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
-                                        Details
-                                    </a>*@
-                                    @*<a href="#" class="text-blue-600 font-light">Learn More 🡥</a>*@
-                                </div>
-
+                <div class="p-3 font-medium">
+                    <div class="flex flex-row justify-between pb-3 border-bottom align-items-center">
+                        <p class="text-2xl">$@Html.DisplayFor(modelItem => item.price)</p>
+                        <div class="bg-danger py-2 px-3 rounded-md text-white">
+                            0%
                         </div>
-                    </a>
+                    </div>
+
+                    <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 dark:text-neutral-50 justify-between">
+                        <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
+                        <div class="flex flex-row">
+                            <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
+                            <i class="fa-solid fa-star text-warning"></i>
+                        </div>
+                    </h5>
+                    <p class="mb-4 space-y-2 font-light">
+                        <span>@Html.DisplayFor(modelItem => item.brand)</span><br />
+                        <span>@Html.DisplayFor(modelItem => item.color)</span>
+                    </p>
+
+                    <a href="/Home/Details_Pro/@item.id_product" class="text-white py-2 px-3 mb-3 rounded-full text-md text-white bg-blue-600 hover:bg-blue-800">View</a>
+
+                        <div class="flex flex-row justify-between align-items-center font-semibold">
+                            @*<a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
+                    Details
+                </a>*@
+                            @*<a href="#" class="text-blue-600 font-light">Learn More 🡥</a>*@
+                        </div>
+
+                </div>
                 </div>
             </div>
         }
