--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.product_seri>
+﻿@model IEnumerable<WebApplication1.Models.product>
 @{
     ViewBag.Title = "SearchPage";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -300,39 +300,40 @@
                 {
                     foreach (var item in Model)
                     {
-
                         <div class="flex justify-center text-md">
                             <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                                <a href="#!">
-                                    <img class="rounded-t-lg"
+                                <a href="/Home/Details_Pro/@item.id_product">
+                                    @*<a href="#!">*@
+                                    <img class="rounded-t-lg h-50 mx-auto"
                                          src="~/wwwroot/Images/Products/@item.images"
                                          alt="" />
-                                </a>
-                                <div class="p-3 font-medium">
-                                    @*<div class="flex flex-row justify-between pb-3 border-bottom">
+                                    @*</a>*@
+                                    <div class="p-3 font-medium">
+                                        <div class="flex flex-row justify-between pb-3 border-bottom">
                                             <p>$@Html.DisplayFor(modelItem => item.price)</p>
                                             <div class="flex flex-row">
                                                 <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
                                                 <i class="fa-solid fa-star text-warning"></i>
                                             </div>
-                                        </div>*@
+                                        </div>
 
-                                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                                        @Html.DisplayFor(modelItem => item.name_seri)
-                                    </h5>
-                                    <p class="mb-4   text-neutral-500 font-light">
-                                        Some quick example text to build on the card title and make up the
-                                        bulk of the card's content.
-                                    </p>
+                                        <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
+                                            @Html.DisplayFor(modelItem => item.names)
+                                        </h5>
+                                        <p class="mb-4   text-neutral-500 font-light">
+                                            Some quick example text to build on the card title and make up the
+                                            bulk of the card's content.
+                                        </p>
 
-                                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
-                                            Details
-                                        </a>
-                                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
+                                        <div class="flex flex-row justify-between align-items-center font-semibold">
+                                            @*<a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
+                                                    Details
+                                                </a>*@
+                                            @*<a href="#" class="text-blue-600 font-light">Learn More 🡥</a>*@
+                                        </div>
+
                                     </div>
-
-                                </div>
+                                </a>
                             </div>
                         </div>
 
