--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -21,10 +21,11 @@
         <div class="list-unstyled font-medium">
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/users/Index">Dashboard</a>
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/products/Index">Product</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Index">Orders</a>
+            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Index">Orders</a> 
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/ranks/Index">Ranks</a>
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/promocodes/Index">Promocodes</a>
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/User/Logout">LOGOUT</a>
+
         </div>
     </div>
 
@@ -34,7 +35,7 @@
             <button id="openNav" class="text-xl p-3" onclick="sidebar_open()"><i class="fa-solid fa-bars"></i></button>
         </div>
 
-        <div class="w-full mb-lg-5 overflow-scroll collapse-horizontal">
+        <div class="w-full mb-lg-5 ">
             <main role="main" class="pb-3">
                 @RenderBody()
             </main>
