--- a/Views/ShoppingCart/ShowToCart.cshtml
+++ b/Views/ShoppingCart/ShowToCart.cshtml
@@ -100,37 +100,37 @@
                 <div class="mt-2 text-black">
                     <div class="relative w-full" data-te-input-wrapper-init>
                         <label for="email" class="text-sm">Email</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" required/>
                     </div>
                 </div>
                 <div class="mt-2 text-black">
                     <div class="relative w-full" data-te-input-wrapper-init>
                         <label for="phone" class="text-sm">Phone</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" required/>
                     </div>
                 </div>
                 <div class="mt-2 text-black">
                     <div class="relative w-full" data-te-input-wrapper-init>
                         <label for="street" class="text-sm">Street</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address" />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address" required/>
                     </div>
                 </div>
                 <div class="mt-2 text-black">
                     <div class="relative w-full" data-te-input-wrapper-init>
                         <label for="district" class="text-sm">District</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" required/>
                     </div>
                 </div>
                 <div class="mt-2 text-black">
                     <div class="relative w-full" data-te-input-wrapper-init>
                         <label for="ward" class="text-sm">Ward</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" required/>
                     </div>
                 </div>
                 <div class="mt-2 text-black">
                     <div class="relative w-full" data-te-input-wrapper-init>
                         <label for="city" class="text-sm">City</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city" />
+                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city" required/>
                     </div>
                 </div>
                 <div class="mt-2 text-black">
@@ -176,7 +176,7 @@
                         </div>
                         <div class="d-flex justify-content-between my-2">
                             <p>Subtotal</p>
-                            <p>$@Session["Total_order"].00</p>
+                            <p>$@Session["Total_order_new"].00</p>
                         </div>
 
                         <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium py-2 mt-2" type="submit" value="Checkout" />
