--- a/Views/orders/Create.cshtml
+++ b/Views/orders/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
-      Layout = "../../Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Create</h2>
@@ -16,10 +16,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.id_user, "id_user", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_customer, "id_customer", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("id_user", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.id_user, "", new { @class = "text-danger" })
+                @Html.DropDownList("id_customer", null , htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.id_customer, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -91,22 +91,14 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.delivering, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.delivering)
-                    @Html.ValidationMessageFor(model => model.delivering, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
+     
 
         <div class="form-group">
-            @Html.LabelFor(model => model.successed, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.completed, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.successed)
-                    @Html.ValidationMessageFor(model => model.successed, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.completed)
+                    @Html.ValidationMessageFor(model => model.completed, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -121,21 +113,12 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.paid, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.paid)
-                    @Html.ValidationMessageFor(model => model.paid, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.id_customer, "id_customer", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_user, "id_user", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("id_customer", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.id_customer, "", new { @class = "text-danger" })
+                @Html.DropDownList("id_user", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.id_user, "", new { @class = "text-danger" })
             </div>
         </div>
 
