--- a/Views/products/Index.cshtml
+++ b/Views/products/Index.cshtml
@@ -1,118 +1,87 @@
-﻿@model IEnumerable<WebApplication1.Models.product>
+﻿@model PagedList.IPagedList<WebApplication1.Models.product>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+@using PagedList;
+@using PagedList.Mvc;
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.names)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.images)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.display)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.weights)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.water_resistance)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.operating_system)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.processor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.battery)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ram)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.rate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.color)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.brand)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.promocode.code)
-        </th>
-        <th></th>
-    </tr>
+<table class="table m-3">
+    <thead class="thead-dark">
+        <tr>
+            <th scope="col">Images</th>
+            <th scope="col">Names</th>
+            <th scope="col">Prices</th>
+            <th scope="col">quantity</th>
+            <th scope="col">rate</th>
+            <th scope="col">color</th>
+            <th scope="col">brand</th>
+            <th scope="col">Promocode</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.names)
-        </td>
-        <td>
-            <img src="~/wwwroot/Images/Products/@Html.DisplayFor(modelItem=>item.images)"   class="h-10"/>
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.display)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.weights)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.water_resistance)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.operating_system)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.processor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.battery)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ram)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.quantity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.rate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.color)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.brand)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.promocode.code)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_product }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_product }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_product })
-        </td>
-    </tr>
-}
-
+                <td>
+                    <img src="~/wwwroot/Images/Products/@Html.DisplayFor(modelItem=>item.images)" class="h-20" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.names)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.price)$
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.rate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.color)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.brand)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.promocode.code)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.id_product }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.id_product }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.id_product })
+                </td>
+            </tr>
+        }
+         </tbody>
 </table>
+<br />
+<div id='Paging' style="text-align: center">
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+</div>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        <li class="page-item">
+            <a class="page-link" href="@Url.Action("Index", "products", new { page = 1 })">Previous</a>
+        </li>
+        @for (int i = 1; i <= Model.PageCount; i++)
+        {
+            int e = 0;
+            e += i;
+            Session["LastPage"] = e;
+            <li class="page-item"><a class="page-link" href="@Url.Action("Index", "products", new { page = i })">@i</a></li>
+        }
+        <li class="page-item">
+            <a class="page-link" href="@Url.Action("Index", "products", new { page = Session["LastPage"] })">Last</a>
+        </li>
+    </ul>
+</nav>
